test/conformance/chainsaw/generate-validating-admission-policy/validatingpolicy/generation-config/default/validatingadmissionpolicybinding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  name: vpol-check-deployment-labels-binding
  ownerReferences:
  - apiVersion: policies.kyverno.io/v1alpha1
    kind: ValidatingPolicy
    name: check-deployment-labels
spec: {}
