test/conformance/chainsaw/generate-validating-admission-policy/validatingpolicy/generation-config/default/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: generation-config-default
spec:
  concurrent: false
  steps:
  - name: create policy
    try:
    - create:
        file: policy.yaml
    - assert:
        file: policy-assert.yaml
  - name: check validatingadmissionpolicy not generated
    try:
    - error:
        file: validatingadmissionpolicy.yaml
  - name: check validatingadmissionpolicybinding not generated
    try:
    - error:
        file: validatingadmissionpolicybinding.yaml
  - name: check validatingwebhookconfiguration
    try:
    - assert:
        file: validatingwebhookconfiguration.yaml
